# nix-forge-registry

./: .env.example  LICENSE  README.md  app.py  flake.nix  pyproject.toml  registry.py
registry/: __init__.py  builder.py  config.py  image.py  routes.py  validation.py
